--- a/index.html
+++ b/index.html
@@ -1,128 +1,136 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="styles/style.css">
-
+  <meta charset="utf-8" />
+  <title>Online Grocery Store</title>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
 
-<!-- Tab links, each one with an onclick event associated with it -->
-<div class="tab">
-  <button class="tablinks" onclick="openInfo(this, 'Client')">Client</button>
-  <button class="tablinks" onclick="openInfo(this, 'Products')">Products</button>
-  <button class="tablinks" onclick="openInfo(this, 'Cart')">Cart</button>
+<header class="topbar">
+  <div class="brand">
+    <h1 class="brand-title">Online Grocery Store</h1>
+    <p class="brand-subtitle">Lab 3 • Navigation + Categories</p>
+  </div>
 
-</div>
+  <!-- Breadcrumb navigation (new pattern) -->
+  <nav class="breadcrumbs" aria-label="Breadcrumb">
+    <button class="crumb navlink" data-tab="Client" type="button">Client</button>
+    <span class="crumb-sep">›</span>
+    <button class="crumb navlink" data-tab="Products" type="button">Products</button>
+    <span class="crumb-sep">›</span>
+    <button class="crumb navlink" data-tab="Cart" type="button">Cart</button>
+  </nav>
+</header>
 
-<!-- Tab content -->
-<div id="Client" class="tabcontent">
-  <h2>Online Grocery Store</h2>
-  <h3>Customer Information</h3>
+<!-- Tab content (pages) -->
+<section id="Client" class="tabcontent">
+  <h2>Customer Information</h2>
   <p>Tell us a bit about you so we can filter products for you.</p>
 
   <fieldset>
     <legend>Visual Accessibility</legend>
-
     <label>
-      <select id = "fontSizeSelect">
-        <option value = "16" selected>Normal</option>
-        <option value = "22">Large</option>
-        <option value = "26">X Large</option>
+      <span class="label">Font size</span>
+      <select id="fontSizeSelect">
+        <option value="16" selected>Normal</option>
+        <option value="22">Large</option>
+        <option value="26">X Large</option>
       </select>
+    </label>
   </fieldset>
-
-  <br />
 
   <fieldset>
     <legend>Dietary Restrictions</legend>
 
-    <label>
+    <label class="check">
       <input type="checkbox" id="prefVegetarian" />
       Vegetarian (no meat/fish)
     </label>
-    <br />
 
-    <label>
+    <label class="check">
       <input type="checkbox" id="prefLactoseFree" />
-      Lactose Intolerant (no diary)
+      Lactose Intolerant (no dairy)
     </label>
-    <br />
 
-    <label>
+    <label class="check">
       <input type="checkbox" id="prefVegan" />
       Vegan (no animal products)
     </label>
-    <br />
 
-    <label>
+    <label class="check">
       <input type="checkbox" id="prefGlutenFree" />
       Gluten Intolerance (no wheat/gluten)
     </label>
   </fieldset>
 
-  <br />
-
   <fieldset>
     <legend>Preference</legend>
 
-    <label>
+    <label class="radio">
       <input type="radio" name="prefOrganic" value="Any" checked />
       No preference
     </label>
-    <br />
 
-    <label>
+    <label class="radio">
       <input type="radio" name="prefOrganic" value="Organic" />
       Prefer organic
     </label>
-    <br />
 
-    <label>
+    <label class="radio">
       <input type="radio" name="prefOrganic" value="NonOrganic" />
       Prefer non-organic
     </label>
   </fieldset>
 
-  <br />
-
-  <button type="button" id="applyPrefsBtn">
+  <button type="button" id="applyPrefsBtn" class="primary">
     Apply my preferences
   </button>
 
-  <p id="prefsSummary" style="margin-top: 10px;"></p>
-</div>
+  <p id="prefsSummary" class="muted" style="margin-top: 10px;"></p>
+</section>
 
+<section id="Products" class="tabcontent">
+  <h2>Your targeted products</h2>
+  <p>We preselected products based on your restrictions. Choose items to buy:</p>
 
-<div id="Products" class="tabcontent">
-  <h3>Your targeted products</h3>
-  <p>We preselected products based on your restrictions.</p>
-	 Choose items to buy:
+  <div class="controls">
+    <label for="categoryFilter"><b>Category:</b></label>
+    <select id="categoryFilter">
+      <option value="All" selected>All</option>
+      <option value="Vegetables">Vegetables</option>
+      <option value="Fruits">Fruits</option>
+      <option value="Dairy">Dairy</option>
+      <option value="Meats">Meats</option>
+      <option value="Pantry">Pantry</option>
+    </select>
 
-   <label for="sortPrice"><b>Sort by price:</b></label>
-<select id="sortPrice">
-  <option value="asc" selected>Least → Most expensive</option>
-  <option value="desc">Most → Least expensive</option>
-</select>
-<br><br>
+    <label for="sortPrice"><b>Sort by price:</b></label>
+    <select id="sortPrice">
+      <option value="asc" selected>Least → Most expensive</option>
+      <option value="desc">Most → Least expensive</option>
+    </select>
+  </div>
 
-	 <div id="displayProduct" class="product-grid"></div>
-	 <button id="addCart" type="button" class="block" onclick="selectedItems()">
-		Add selected items to cart.
-	</button>
-</div>
+  <div id="displayProduct" class="product-grid"></div>
 
-<div id="Cart" class="tabcontent">
-  <h3>Cart</h3>
+  <button id="addCart" type="button" class="primary" onclick="selectedItems()">
+    Add selected items to cart
+  </button>
+</section>
+
+<section id="Cart" class="tabcontent">
+  <h2>Cart</h2>
   <p>Here is your cart:</p>
   <div id="displayCart"></div>
 
-  <button type="button" id="clearCartBtn" class="block">
+  <button type="button" id="clearCartBtn" class="secondary">
     Clear cart / Restart
   </button>
-</div>
-<p id="signature">Site created by Group 11</p>	
+</section>
 
+<p id="signature">Site created by Group 11</p>
 
 <script src="scripts/groceries.js"></script>
 <script src="scripts/main.js"></script>
